loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__list_repeat.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let ints: Vec<i64> = incan_std_core::collections::list_repeat(-1, (4) as i64);
    let words: Vec<String> = incan_std_core::collections::list_repeat(
        "seed".to_string(),
        (2) as i64,
    );
    let empty: Vec<i64> = incan_std_core::collections::list_repeat(0, (0) as i64);
    let nested: Vec<Vec<i64>> = incan_std_core::collections::list_repeat(
        vec![1],
        (2) as i64,
    );
    let named: Vec<i64> = incan_std_core::collections::list_repeat(7, (3) as i64);
    let _ = println!(
        "{}", { let __parts : [& str; 6usize] = ["", " ", " ", " ", " ", ""]; let __args
        : Vec < String > = vec![format!("{}", * incan_std_core::collections::list_get(&
        ints, (0) as i64)), format!("{}", incan_std_core::collections::list_get(& words,
        (1) as i64).clone()), format!("{}", ::std::convert::identity(empty.len() as
        i64)), format!("{}", * incan_std_core::collections::list_get(&
        incan_std_core::collections::list_get(& nested, (1) as i64).clone(), (0) as
        i64)), format!("{}", * incan_std_core::collections::list_get(& named, (2) as
        i64))]; incan_std_core::strings::fstring(& __parts, & __args) }
    );
}
