loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__loop_expressions.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn find_value(flag: bool) -> i64 {
    return loop {
        if flag {
            break 42;
        }
        break 7;
    };
}
fn spin(limit: i64) {
    let mut current = 0;
    loop {
        if current >= limit {
            break;
        }
        current = current + 1;
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let answer: i64 = find_value(true);
    let _ = spin(answer);
}
