loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__loops.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_while_loop() {
    let mut count: i64 = 0;
    while count < 5 {
        let _ = println!("{}", count);
        count = count + 1;
    }
}
fn test_for_range_one_arg() {
    for i in 0_i64..(5 as i64) {
        let _ = println!("{}", i);
    }
}
fn test_for_range_two_args() {
    for i in (1 as i64)..(10 as i64) {
        let _ = println!("{}", i);
    }
}
fn test_for_range_three_args() {
    for i in incan_std_core::iter::range(0, 100, (10) as i64) {
        let _ = println!("{}", i);
    }
}
fn test_for_list() {
    let numbers: Vec<i64> = vec![1, 2, 3, 4, 5];
    for n in numbers.iter().copied() {
        let _ = println!("{}", n);
    }
}
fn test_for_with_break() {
    for i in 0_i64..(10 as i64) {
        if i == 5 {
            break;
        }
        let _ = println!("{}", i);
    }
}
fn test_for_with_continue() {
    for i in 0_i64..(10 as i64) {
        if incan_std_core::num::py_mod_i64(i, 2) == 0 {
            continue;
        }
        let _ = println!("{}", i);
    }
}
fn test_nested_loops() {
    for i in 0_i64..(3 as i64) {
        for j in 0_i64..(3 as i64) {
            let _ = println!("{}", i * 10 + j);
        }
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_while_loop();
    let _ = test_for_range_one_arg();
    let _ = test_for_range_two_args();
    let _ = test_for_range_three_args();
    let _ = test_for_list();
    let _ = test_for_with_break();
    let _ = test_for_with_continue();
    let _ = test_nested_loops();
}
