loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__lowercase_types.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_lowercase_types() {
    let _numbers: Vec<i64> = vec![1, 2, 3];
    let _data: std::collections::HashMap<String, i64> = [
        ("a".to_string(), 1),
        ("b".to_string(), 2),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    let _unique: std::collections::HashSet<i64> = [1, 2, 3]
        .into_iter()
        .collect::<std::collections::HashSet<_>>();
    let _pair: (i64, String) = (42, "hello".to_string());
    let _maybe: Option<i64> = None::<i64>;
    let _ = println!("{}", "All lowercase types work!");
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_lowercase_types();
}
